@@ -46,6 +46,7 @@ TIEXPORT const char *TICALL tifiles_model_to_string(CalcModel model)
 	case CALC_TI84P: return "TI84+";
   	case CALC_TI83P: return "TI83+";
   	case CALC_TI83:  return "TI83";
+	case CALC_TI82S: return "TI82s";
   	case CALC_TI82:  return "TI82";
   	case CALC_TI73:  return "TI73";
   	default: return "unknown";
@@ -66,6 +67,8 @@ TIEXPORT CalcModel TICALL tifiles_string_to_model(const char *str)
 		return CALC_TI73;
 	else if(!strcmp(str, "TI82"))
 		return CALC_TI82;
+	else if(!strcmp(str, "TI82s"))
+		return CALC_TI82S;
 	else if(!strcmp(str, "TI83"))
 		return CALC_TI83;
 	else if(!strcmp(str, "TI83+"))
